--- a/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/src/main/webapp/WEB-INF/classes/messages.properties
@@ -1,7 +1,7 @@
-title=SpringApp_v1
-heading=Hello :: SpringApp
+title=Amortization Table
+heading=Amortization table :: Ulebank
 greeting=Greetings, it is now
-priceincrease.heading=Price Increase :: SpringApp
+priceincrease.heading=Recalculate of interest :: Ulebank
 error.not-specified=Percentage not specified!!!
 error.too-low=You have to specify a percentage higher than {0}!
 error.too-high=Don''t be greedy - you can''t raise prices by more than {0}%!
